# Micrograd-in-Rust

./: README.md
micrograd/: Cargo.toml
micrograd/src/: engine.rs  main.rs  neural_network.rs  validator.rs
tensor_micrograd_cnn/: Cargo.toml  heaptrack_report.txt
tensor_micrograd_cnn/src/: alexnet.rs  data_loader.rs  dataset.rs  layers.rs  lib.rs  main.rs  model.rs  tensor.rs  tensor_tests.rs  train.rs
